rever scrollbar gutter fix

--- a/styl.css
+++ b/styl.css
@@ -214,7 +214,7 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   font-family: "Inter", sans-serif;
-  scrollbar-gutter: stable;
+  overflow-x: hidden;
 }
 
 hr {
